# server

./: .env.dist  README.md  manage.py  pyproject.toml
.github/workflows/: django-test.yml
admin_extensions/: forms.py  mixins.py  urls.py  views.py
core/: views.py
donationalerts/: admin.py  exceptions.py  models.py  schemas.py  selectors.py  services.py  tasks.py  tests.py  urls.py  views.py
donationalerts/exceptions/: internal.py
donationalerts/migrations/: 0001_initial.py  0002_alter_payment_is_used.py
donationalerts/services/: donationalerts.py  payments.py
promocodes/: admin.py  exceptions.py  forms.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
promocodes/migrations/: 0001_initial.py  0002_alter_promocode_value.py  0002_alter_promocodesgroup_count.py  0003_remove_promocodesgroup_count_and_more.py
scripts/: subscription_expired_users.py  trial_expired_users.py
telegram_bot/: admin.py  exceptions.py  models.py  schemas.py  selectors.py  serializers.py  services.py  tasks.py  telegram.py  tests.py  urls.py  views.py
telegram_bot/exceptions/: api.py  internal.py
telegram_bot/migrations/: 0001_initial.py  0002_user_is_subscribed.py  0003_alter_user_subscribed_at.py  0004_remove_user_is_subscribed.py  0004_user_has_used_promocode.py  0005_rename_has_used_promocode_user_has_activated_promocode.py  0005_scheduledtask.py  0006_merge_20230114_0804.py  (+1 more)
vobla_vpn/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
wireguard/: admin.py  exceptions.py  models.py  schemas.py  selectors.py  tasks.py  urls.py  views.py
(+14 files in other folders)
